2015-05-25 Loic Valery <lvalery@cern.ch>
        * myFit.C: fixing the order of commands (smoothing done before writing the histos in the file)
        * Region.C: fix on the central values (consistent with Roostats) -- still work to do on the systematics
        * Common.C/.h: moving the variable for dumping systematic control plots in Common

2015-05-22 Michele Pinamonti <michele.pinamonti@gmail.com>
        * general: cahnged organization of the output: now all the files created by a fit are inside a single directory, with a sub-directory structure
        * TtHFit.C: re-introduced SmoothSystematics
        * TtHFit.C, myFit.C: smoothing and syst-plots commands moved to myFit.C (option for saving syst-plots moved as well)
        * tableToLatex.sh: example script added to turn txt tables into latex format
        * TtHFit.C: Fixed signal-regions plot

2015-05-20 Loic Valery <lvalery@cern.ch>
        * TtHFit.C: fix mem leaks, remove unused function (SmoothSystematics), change some histograms names to avoid warning messages
        * TtHFit.h: propagates function suppression
        * TtHFit.C: adding an option in the config file to avoid dumping syst control histograms
        * SampleHist.C: fix bug in the propagation of the normalisation systematic uncertainties

2015-05-14 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit.C: pre and post fit yield tables added
        * TtHFit.C, runSig.C: significance calculation added
        * TtHFit.C: limit and significance output stored in proper file sin proper directories
        * TthPlot.C: plotting style improved (no numbers in the legend, ability to merge small samples...)
        * TtHFit.C, Region.C: root file outptuts added for pre- and post-fit plots (summary as well)
        * util/myFit.C: options added for the parser
        * PlotLimits.C: macro added to plot limits (still not interfaced with the main code)
        * Versioning: 1.3
        