@@ -124,6 +124,7 @@ Here's a list of the inputs and options which can be specifed in the config file
       SystControlPlots -> if set to true, plots will be dumped showing the shape effect of a given systematic (before and after smoothing/symmetrisation)
       PlotOptions      -> a set os options for plotting:
         YIELDS : if set, the legend will be one-column and will include the yileds; otherwise two-columns and no yields
+      CorrelationThreshold -> Threshold used to draw the correaltion matrix (only systematics with at least one correlation larger than than draw) (0.05->5%)
       ...
       
     Sample:
