@@ -4,18 +4,26 @@
 #define __CorrelationMatrix__
 
 class CorrelationMatrix {
+    
 public:
-  CorrelationMatrix();
-  ~CorrelationMatrix();
-  
-  void AddNuisPar(string p);
-  void SetCorrelation(string p0,string p1,float corr);
-  float GetCorrelation(string p0,string p1);
-  
-  vector<string> fNuisParNames;
-  map<string,int> fNuisParIdx;
-  map<string,bool> fNuisParIsThere;
-  float fMatrix[MAXsyst][MAXsyst];
+    CorrelationMatrix();
+    ~CorrelationMatrix();
+    
+    //
+    // Functions
+    //
+    void AddNuisPar(string p);
+    void SetCorrelation(string p0,string p1,float corr);
+    float GetCorrelation(string p0,string p1);
+    void Draw(const string &name, const double corrMin = -1.);
+    
+    //
+    // Data members
+    //
+    vector<string> fNuisParNames;
+    map<string,int> fNuisParIdx;
+    map<string,bool> fNuisParIsThere;
+    float fMatrix[MAXsyst][MAXsyst];
 };
 
 #endif
