@@ -7,23 +7,29 @@
 
 class FitResults {
 public:
-  FitResults();
-  ~FitResults();
-  
-  void AddNuisPar(NuisParameter *par);
-  float GetNuisParValue(string p);
-  float GetNuisParErrUp(string p);
-  float GetNuisParErrDown(string p);
-  void ReadFromTXT(string fileName);
-  // ReadFromROOT(string rootFileName);
-  
-  vector<string> fNuisParNames;
-  map<string,int> fNuisParIdx;
-  map<string,bool> fNuisParIsThere;
-
-  std::vector < NuisParameter* > fNuisPar;
-  CorrelationMatrix *fCorrMatrix;
-
+    FitResults();
+    ~FitResults();
+    
+    //
+    // Functions
+    //
+    void AddNuisPar(NuisParameter *par);
+    float GetNuisParValue(string p);
+    float GetNuisParErrUp(string p);
+    float GetNuisParErrDown(string p);
+    void ReadFromTXT(string fileName);
+    void DrawCorrelationMatrix( const string &path, const double corrMin = -1. );
+    
+    //
+    // Data members
+    //
+    vector<string> fNuisParNames;
+    map<string,int> fNuisParIdx;
+    map<string,bool> fNuisParIsThere;
+    
+    std::vector < NuisParameter* > fNuisPar;
+    CorrelationMatrix *fCorrMatrix;
+    
 };
 
 #endif
