@@ -9,6 +9,7 @@ Fit: "FitExample"
   DebugLevel: 1
 %   ResultsFolder: mynewresults
   SystControlPlots: true
+  CorrelationThreshold: 0.05
 
 Region: "SR_1"
 %   Type: SIGNAL
